*8707* Fixed Superfish menu alignment issues

--- a/styles/structure/navigation.less
+++ b/styles/structure/navigation.less
@@ -23,7 +23,7 @@
 	.pkp_form div.section {
 		margin-bottom: 0px;
 	}
-	
+
 	.pkp_helpers_flatlist {
 		margin-top: 15px;
 	}
@@ -39,17 +39,26 @@
 }
 
 .pkp_structure_head_localNav {
-
 	.sf-menu {
 
 		a {
 			padding-right: 0.45em;
+			border: none;
 		}
 
 		a.sf-with-ul {
-			padding-right: 1.55em;
+			padding-right: 2em;
+		}
+
+		li {
+			background: #a2c6dc;
 		}
 	}
+
+	.sf-arrows .sf-with-ul:after {
+		top: 55%;
+	}
+
 }
 
 .pkp_structure_search {
